--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "google-adk>=1.12.0",
+    "psycopg2>=2.9.10",
     "pydantic>=2.11.7",
 ]
 
