--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "google-adk>=1.12.0",
     "psycopg2>=2.9.10",
     "pydantic>=2.11.7",
+    "yfinance>=0.2.65",
 ]
 
 [tool.setuptools.packages.find]
